<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="30dp"
    android:paddingBottom="20dp"
    tools:context=".ui.Tela1.Tela1Activity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/et_nome_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/et_email_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/et_telefone_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789()"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/et_data_de_nascimento_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_data_de_nascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789/"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">

        <RadioGroup
            android:id="@+id/rg_genero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50">

            <TextView
                android:id="@+id/tv_genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_genero_text" />

            <RadioButton
                android:id="@+id/rb_masculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_masculino_text" />

            <RadioButton
                android:id="@+id/rb_feminino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_feminino_text" />
        </RadioGroup>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_interesses_text" />

            <CheckBox
                android:id="@+id/cb_musica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_musica_text" />

            <CheckBox
                android:id="@+id/cb_filme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_filme_text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/bt_cadastrar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:onClick="onClickCadastrar"
            android:text="@string/bt_cadastrar_text" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10" />

        <Button
            android:id="@+id/bt_enviar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:onClick="onClickEnviar"
            android:text="@string/bt_enviar_text" />
    </LinearLayout>
</LinearLayout>
